kustomize/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    component: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    component: keycloak
